fixed alignment

--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ body{
 }
 
 .intro {
-	font-size: 0.7rem;
+	font-size: 1.3rem;
 	position: absolute;
 	top: 60px;
 	left: 0;
@@ -44,6 +44,7 @@ body{
 	color: white;
 	text-align: center;
 	background-color: rgba(0, 0, 0, 0.3);
+	font-weight: 700;
 
 }
 
@@ -60,7 +61,7 @@ body{
 .contact-here {
 	text-decoration: none;
 	position: absolute;
-	top: 110px;
+	top: 125px;
 	left: 0;
 	right: 0;
 	text-align: center;
@@ -72,8 +73,9 @@ body{
 	color: #12456d;
 	border: 3px solid #12456d;
 	/*width: 210px;*/
-	/*margin: 0 auto;*/
-	/*padding: 1px;*/
+	/*margin: 3% auto;*/
+	padding: 1%;
+	font-weight: 600;
 	/*padding-bottom: 2px;*/
 	/*position: absolute;*/
 	/*top: 100px;*/
@@ -90,11 +92,12 @@ body{
 }
 .more {
 	position: absolute;
-	top: 150px;
-	font-size: 20px;
+	top: 175px;
+	font-size: 18px;
 	left: 0;
 	right: 0;
 	text-align: center;
+	font-weight: 600;
 }
 
 .learn-more  {
@@ -108,6 +111,7 @@ body{
 
 .skills{
 	color: #93a4aa;
+	margin: 10% auto;
 }
 
 .skills-intro {
@@ -116,10 +120,22 @@ body{
 
 .skills-intro h1{
 	color: black;
+	font-size: 35px;
+	font-weight: 900;
 }
 
-.eventza {
-	padding-top: 2%;
+.skills-intro h2 {
+	margin: 6%;
+	font-size: 25px;
+	font-weight: 900;
+}
+
+.websites {
+	padding: 4%;
+}
+
+.image {
+	padding: 0 4%;
 }
 
 .about-skills {
@@ -129,10 +145,18 @@ body{
 
 .skills-images {
 	width: 15%;
+	margin: 2% auto;
 }
 
 .skill-heading {
 	color: black;
+	font-size: 25px;
+	margin: 4% auto;
+	font-weight: 600;
+}
+
+.skills-details p{
+	margin: 5% auto;
 }
 
 .work{
@@ -146,7 +170,27 @@ body{
 	text-align: center;
 	border-bottom: 2px solid lightgrey;
 	width: 80%;
-	margin: 0 auto;
+	margin: 10% auto;
+}
+
+.about-work h1{
+	font-size: 35px;
+	font-weight: 700;	
+}
+
+.app-heading {
+	font-size: 30px;
+	font-weight: 600;	
+}
+
+.tools {
+	margin: 15% auto;
+}
+
+.about-app {
+	font-weight: 600;
+	padding: 4%;
+	font-size: 16px;
 }
 
 .image {
@@ -157,10 +201,6 @@ body{
 
 .pics {
 	width: 100%;
-}
-
-.type {
-	padding: 0 35%;
 }
 
 .list {
@@ -175,9 +215,6 @@ body{
 	padding: 0 80px;
 	padding: 0 80px;
 }
-
-
-
 
 .website-button {
 	margin: 8% auto;
@@ -205,9 +242,10 @@ body{
 }
 
 .contact-details{
-	margin: 0;
+	margin: 0 auto;
 	text-align: center;
-	padding: 2%;
+	padding: 6%;
+	font-size: 18px;
 }
 
 .social-buttons{
@@ -290,6 +328,9 @@ body{
 		top: 250px;
 	}
 
+	.about-app {
+		font-size: 18px;
+	}
 	/*.learn-more h5 {
 		color: black;
 	}*/
@@ -306,28 +347,38 @@ body{
 
 	}
 
-	.apps-info {
+	/*.apps-info {
 		width: 50%;
 	}
-
+*/
 	.type {
 		padding: 0 32%;
 		/*text-align: center;*/
 	}
 
-	.app-info {
-		width: 50%;
-		float: right;
+	.app-heading {
+		margin: 15% auto 1%;
+		/*clear: both;
+		display: block;*/
 	}
 
-	.about-apps {
-		width: 50%;
-	}
-
-	.about-budget {
+	/*.image {
+		clear: both;
+		display: block;
+	}*/
+	/*.app-info {
 		width: 50%;
 		float: right;
-	}
+	}*/
+
+	/*.about-apps {
+		width: 50%;
+		color: grey;
+	}*/
+
+	/*.about-budget {
+		float: right;
+	}*/
 	/*.budgetly-type {
 		text-align: center;
 	}*/
@@ -336,21 +387,33 @@ body{
 	}
 
  
-	.image {
+	/*.image {
 	  width: 50%;
 	  float: right;
 	  margin: 1% auto;
 	}
-
-	.pics {
+*/
+	/*.pics {
 	  width: 70%;
 	}
 
 	.budgetly-image {
 	    float: left;
+	}*/
+}
+
+@media (min-width: 560px) {
+	.app-heading {
+		margin: 25% auto 1%;
 	}
 }
-	
+
+
+@media (min-width: 630px) {
+	.app-heading {
+		margin: 35% auto 1%;
+	}
+}
 
 @media (min-width: 670px) {
 	.intro {
@@ -386,6 +449,19 @@ body{
 	}
 }
 
+@media (min-width: 750px) {
+	.app-heading {
+		margin: 35% auto 1%;
+	}
+}
+
+@media (min-width: 860px) {
+	.app-heading {
+		margin: 45% auto 1%;
+	}
+}
+
+
 @media (min-width: 900px) {
 	/*.website-line {
 		margin-bottom: 5%;
@@ -413,6 +489,72 @@ body{
 	.contact-here {
 		top: 300px;
 	}
+
+	.apps-info {
+		width: 50%;
+	}
+
+/*.image {
+		clear: both;
+		display: block;
+	}*/
+	.app-info {
+		width: 50%;
+		float: right;
+	}
+
+	.about-apps {
+		width: 50%;
+		color: grey;
+	}
+
+	.about-budget {
+		float: right;
+	}
+	.budgetly-type {
+		text-align: center;
+	}
+	.image {
+	  width: 50%;
+	  float: right;
+	  margin: 1% auto;
+	}
+
+	.pics {
+	  width: 100%;
+	}
+
+	.budgetly-image {
+	    float: left;
+	    margin: 6% auto;
+	}
+
+	.work {
+		padding-left: 50px;
+		padding-right: 50px;
+	}
+
+	.about-work h1{
+		padding-top: 0;
+		/*width: 600px;*/
+
+	}
+
+	.app-heading {
+		margin: 0 auto;
+	}
+	/*.apps-info {
+		width: 50%;
+	}
+*/
+	.type {
+		padding: 0 32%;
+		/*text-align: center;*/
+	}
+	.my-bucketlist-type {
+		padding: 0 21%;
+	}
+
 }
 @media (min-width: 1115px) {
 	.container {
@@ -431,10 +573,36 @@ body{
 		top: 600px;
 	}
 
+	.budgetly-image {
+		margin: 0 auto;
+	}
 	/*.profile-logo {
 		top: -95px;
 	}
 */
+	.about-work {
+		margin: 5% auto;
+	}
+
+	.websites{
+		padding: 2%;
+	}
+
+	.website-line {
+		margin: 3% auto;
+	}
+
+	.budgetly .website-button {
+		margin-bottom: 12%;
+	}
+	.contact-details {
+		padding: 2%;
+		font-size: 20px;
+	}
+
+	.social-buttons p {
+		padding: 1%;
+	}
 }
 
 @media (min-width: 1150px) {
